@@ -1,4 +1,5 @@
 c:::755:/:envdir:
+c:::755:/:envini:
 c:::755:/:envuidgid:
 c:::755:/:fghack:
 c:::755:/:multilog:
