@@ -64,6 +64,7 @@ if it runs out of memory for environment variables, or if it cannot run
 Otherwise its exit code is the same as that of
 .IR child .
 .SH SEE ALSO
+envini(8),
 envuidgid(8),
 fghack(8),
 multilog(8),
