@@ -29,6 +29,7 @@ Otherwise its exit code is the same as that of
 .IR child .
 .SH SEE ALSO
 envdir(8),
+envini(8),
 fghack(8),  
 multilog(8),
 pgrphack(8),
