@@ -17,6 +17,7 @@ has exited and the pipe has been closed,
 exits. 
 .SH SEE ALSO
 envdir(8),
+envini(8),
 envuidgid(8),
 multilog(8),
 pgrphack(8),
