@@ -347,6 +347,7 @@ different file format.
 fnmatch(3),
 glob(7),
 envdir(8),
+envini(8),
 envuidgid(8),
 fghack(8),  
 pgrphack(8),
