@@ -11,6 +11,7 @@ runs
 in a new process group.
 .SH SEE ALSO
 envdir(8),
+envini(8),
 envuidgid(8),
 fghack(8),  
 multilog(8),
