@@ -1,3 +1,3 @@
-dependon envdir envuidgid fghack installer matchtest multilog pgrphack \
+dependon envdir envini envuidgid fghack installer matchtest multilog pgrphack \
 	readproctitle setlock setuidgid sleeper softlimit supervise svc \
 	svok svscan svscanboot svstat svup tai64n tai64nlocal
