@@ -55,6 +55,7 @@ I have not seen a system with a limit below 512 bytes.
 .SH SEE ALSO
 ps(1),
 envdir(8),
+envini(8),
 envuidgid(8),
 fghack(8),  
 multilog(8),
