@@ -65,6 +65,7 @@ cannot be opened (or created) or locked,
 prints an error message and exits nonzero.
 .SH SEE ALSO
 envdir(8),
+envini(8),
 envuidgid(8),
 fghack(8),  
 multilog(8),
