@@ -36,6 +36,7 @@ Otherwise its exit code is the same as that of
 Set account's supplementary gids.
 .SH SEE ALSO
 envdir(8),
+envini(8),
 envuidgid(8),
 fghack(8),  
 multilog(8),
