@@ -144,6 +144,7 @@ Same as
 .B \-t
 .SH SEE ALSO
 envdir(8),
+envini(8),
 envuidgid(8),
 fghack(8),  
 multilog(8),
