@@ -72,6 +72,7 @@ it switches to that
 when it starts.
 .SH SEE ALSO
 envdir(8),
+envini(8),
 envuidgid(8),
 fghack(8),  
 multilog(8),
