@@ -31,6 +31,7 @@ and clears all other environment variables.
 .SH SEE ALSO
 ps(1),
 envdir(8),
+envini(8),
 envuidgid(8),
 fghack(8),  
 multilog(8),
