@@ -45,6 +45,7 @@ exits 0 when it sees end of input. It exits 111 without an error message if
 it has trouble reading stdin or writing stdout. 
 .SH SEE ALSO
 envdir(8),
+envini(8),
 envuidgid(8),
 fghack(8),  
 multilog(8),
